# xidlehook

./: .gitignore  .gitlab-ci.yml  Cargo.nix  Cargo.toml  README.md  README.org  crate-hashes.json  default.nix  flake.nix  pinned.nix  publish.sh  rustfmt.toml  shell.nix  test-client.sh  test-daemon.sh  test-pid.sh  test-unstable.sh  test-usecase.sh  test.sh
src/: lib.rs  main.rs  pulse.rs  timers.rs  x11api.rs
src/bin_impl/: mod.rs  stable.rs  unstable.rs
src/bin_impl/unstable/: mod.rs
src/modules/: mod.rs  once.rs  pulse.rs  stop_at.rs  xcb.rs
tests/: timer.rs
xidlehook/: Cargo.toml  test-client.sh
xidlehook-core/: Cargo.toml  README.md
xidlehook-core/examples/: xidlehook.rs  xprintidle.rs
xidlehook-core/src/: lib.rs  timers.rs
xidlehook-core/src/modules/: mod.rs  pulse.rs  stop_at.rs  xcb.rs
xidlehook-core/tests/: disabled_timers.rs  first_timers.rs  general_timers.rs  no_timers.rs  timer.rs
xidlehook-daemon/: Cargo.toml  README.md
xidlehook-daemon/src/: main.rs  signal_handler.rs  socket_api.rs  socket_models.rs  timer.rs  timers.rs
xidlehook-daemon/src/socket/: handler.rs  mod.rs  models.rs
xidlehook/examples/: xidlehook.rs  xprintidle.rs
xidlehook/src/: lib.rs  main.rs  timers.rs
xidlehook/src/modules/: mod.rs  pulse.rs  xcb.rs
