[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "xautolock rewrite in Rust, with a few extra features"
edition = "2018"
license = "MIT"
name = "xidlehook"
readme = "README.md"
repository = "https://github.com/jD91mZM2/xidlehook"
version = "0.8.0"
default-run = "xidlehook"

[dependencies]
log = "0.4.8"
structopt = "0.3.2"
env_logger = "0.7.0"
nix = "0.15.0"

[dependencies.libpulse-binding]
optional = true
version = "2.6.0"
default-features = false
features = ["pa_v12_compatibility"]

[dependencies.xcb]
features = ["x11", "screensaver"]
version = "0.8.2"

[features]
default = ["pulse"]
pulse = ["libpulse-binding"]
