[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "xautolock rewrite in Rust, with a few extra features"
edition = "2018"
license = "MIT"
name = "xidlehook"
readme = "README.md"
repository = "https://github.com/jD91mZM2/xidlehook"
version = "0.8.0"
default-run = "xidlehook"

[dependencies]
# For unstable. Requires async-std fork because of
# https://github.com/async-rs/async-std/issues/248
# async-std = { version = "0.99.8", optional = true }
async-std = { git = "https://github.com/mvucenovic/async-std", rev = "a057733606f7b32f06d57ad0e945e422cb7030c5", optional = true, features = [ "unstable" ] }
futures-preview = { version = "=0.3.0-alpha.19", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = { version = "1.0.41", optional = true }

# For stable
env_logger = "0.7.0"
log = "0.4.8"
nix = "0.15.0"
structopt = "0.3.2"
xcb = { version = "0.8.2", features = ["x11", "screensaver"] }

[dependencies.libpulse-binding]
optional = true
version = "2.6.0"
default-features = false
features = ["pa_v12_compatibility"]

[features]
default = ["pulse"]
unstable = ["async-std", "futures-preview", "serde", "serde_json"]
pulse = ["libpulse-binding"]

[[bin]]
name = "xidlehook-client"
required-features = ["unstable"]
