[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "xautolock rewrite in Rust, with a few extra features"
edition = "2018"
license = "MIT"
name = "xidlehook"
version = "0.10.0"
default-run = "xidlehook"

repository = "https://gitlab.com/jD91mZM2/xidlehook"
readme = "../README.md"
keywords = ["xorg", "x", "timer"]
categories = ["date-and-time", "command-line-utilities"]

[dependencies]
env_logger = "0.7.1"
futures = "0.3.1"
log = "0.4.8"
nix = "0.15.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
structopt = "0.3.5"
xcb = { version = "1.0.0", features = ["x11", "screensaver"] }
xidlehook-core = { version = "0.3.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.3.0", features = ["io-util", "macros", "signal", "sync", "net", "rt"] }

[features]
default = ["pulse"]
pulse = ["xidlehook-core/pulse"]
