[package]
name = "xidlehook"
description = "xidlehook core library"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
log = "0.4.8"
nix = "0.15.0"
structopt = "0.3.2"
xcb = { version = "0.8.2", features = ["x11", "screensaver"] }

# Requires async-std fork because of
# https://github.com/async-rs/async-std/issues/248
[dependencies.async-std]
git = "https://github.com/mvucenovic/async-std"
rev = "a057733606f7b32f06d57ad0e945e422cb7030c5"
optional = true
features = [ "unstable" ]

[dependencies.libpulse-binding]
optional = true
version = "2.6.0"
default-features = false
features = ["pa_v12_compatibility"]

[dev-dependencies]
env_logger = "0.7.0"

[features]
default = ["pulse"]
pulse = ["libpulse-binding"]
